# serializer version: 1
# name: test_create_entry_when_host_valid
  FlowResultSnapshot({
    'context': dict({
      'source': 'user',
      'unique_id': 'heos',
    }),
    'data': dict({
      'host': '127.0.0.1',
      'manage_host': False,
    }),
    'description': None,
    'description_placeholders': None,
    'flow_id': <ANY>,
    'handler': 'heos',
    'minor_version': 2,
    'options': dict({
    }),
    'result': ConfigEntrySnapshot({
      'data': dict({
        'host': '127.0.0.1',
        'manage_host': False,
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'heos',
      'entry_id': <ANY>,
      'minor_version': 2,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': 'HEOS System',
      'unique_id': 'heos',
      'version': 1,
    }),
    'subentries': tuple(
    ),
    'title': 'HEOS System',
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
    'version': 1,
  })
# ---
# name: test_discovery
  FlowResultSnapshot({
    'context': dict({
      'confirm_only': True,
      'source': 'ssdp',
      'unique_id': 'heos',
    }),
    'data': dict({
      'host': '127.0.0.1',
      'manage_host': True,
    }),
    'description': None,
    'description_placeholders': None,
    'flow_id': <ANY>,
    'handler': 'heos',
    'minor_version': 2,
    'options': dict({
    }),
    'result': ConfigEntrySnapshot({
      'data': dict({
        'host': '127.0.0.1',
        'manage_host': True,
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'heos',
      'entry_id': <ANY>,
      'minor_version': 2,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'ssdp',
      'subentries': list([
      ]),
      'title': 'HEOS System',
      'unique_id': 'heos',
      'version': 1,
    }),
    'subentries': tuple(
    ),
    'title': 'HEOS System',
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
    'version': 1,
  })
# ---
